# euler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generateEmptyChallengeProject.sh
challenge1/: CMakeLists.txt  README.md  main.cpp
challenge10/: CMakeLists.txt  README.md  main.cpp
challenge11/: CMakeLists.txt  README.md  main.cpp
challenge12/: CMakeLists.txt  README.md  main.cpp
challenge13/: CMakeLists.txt  README.md  main.cpp
challenge14/: CMakeLists.txt  README.md  main.cpp
challenge2/: .gitignore  CMakeLists.txt  README.md  main.cpp
challenge3/: CMakeLists.txt  README.md  eratosthene_table.cpp  eratosthene_table.h  main.cpp
challenge4/: CMakeLists.txt  README.md  main.cpp
challenge5/: CMakeLists.txt  README.md  eratosthene_table.cpp  eratosthene_table.h  main.cpp
challenge6/: CMakeLists.txt  README.md  main.cpp
challenge7/: CMakeLists.txt  README.md  main.PVS-Studio.cfg  main.PVS-Studio.i  main.cpp
challenge8/: .gitignore  CMakeLists.txt  README.md  main.PVS-Studio.cfg  main.PVS-Studio.i  main.cpp
challenge9/: .gitignore  CMakeLists.txt  README.md  main.PVS-Studio.cfg  main.PVS-Studio.i  main.cpp
challenge_library/: CMakeLists.txt
challenge_library/eratosthene_sieve/: CMakeLists.txt  eratosthene_sieve.cpp  eratosthene_sieve.h
challenge_library/numerals/: CMakeLists.txt  numerals.h
