set(ERATOSTHENE_SIEVE_LIBRARY_SOURCE_FILES eratosthene_sieve.cpp)
set(ERATOSTHENE_SIEVE_LIBRARY_HEADER_FILES eratosthene_sieve.h)
set(ERATOSTHENE_SIEVE_LIBRARY_INCLUDES "./")

add_library(${ERATOSTHENE_SIEVE_LIBRARY_NAME} INTERFACE)
target_include_directories(${ERATOSTHENE_SIEVE_LIBRARY_NAME} INTERFACE ${ERATOSTHENE_SIEVE_LIBRARY_INCLUDES})

install(TARGETS ${ERATOSTHENE_SIEVE_LIBRARY_NAME}
        EXPORT ${ERATOSTHENE_SIEVE_LIBRARY_NAME}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})