set(NUMERALS_LIBRARY_HEADER_FILES numerals.h)
set(NUMERALS_LIBRARY_INCLUDES "./")

add_library(${NUMERALS_LIBRARY_NAME} INTERFACE)
target_include_directories(${NUMERALS_LIBRARY_NAME} INTERFACE ${NUMERALS_LIBRARY_INCLUDES})

install(TARGETS ${NUMERALS_LIBRARY_NAME}
        EXPORT ${NUMERALS_LIBRARY_NAME}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})